--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -10,7 +11,7 @@
 
 <body>
     <header>
-        <img src="img/marca_logo.svg" alt="">
+        <p class="logo">Logo</p>
         <nav>
             <a href="">asdad</a>
             <a href="">asdas</a>
