deje agregada una seccion de presentacion de pagina

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </header>
 
     <main>
-
+        <section class="presentacion"></section>
+        
     </main>
 
     <footer></footer>    
