hice la estructura basica del menu para mascotas

--- a/index.html
+++ b/index.html
@@ -23,6 +23,35 @@
     <main>
         <section class="presentacion"></section>
         
+        <section class="menu">
+            <div class="seleccion">
+                <p>Menu por mascota</p>
+                <a href="">Ver todo</a>
+            </div>
+
+            <div class="mascotas"> 
+                <div>
+                    <img src="img/perro.jpg" alt="">
+                    <p>Perros</p>
+                </div>
+
+                <div>
+                    <img src="img/perro.jpg" alt="">
+                    <p>Gatos</p>
+                </div>
+
+                <div>
+                    <img src="img/perro.jpg" alt="">
+                    <p>Aves</p>
+                </div>
+
+                <div>
+                    <img src="img/perro.jpg" alt="">
+                    <p>Conejos</p>
+                </div>
+                
+            </div>
+        </section>
     </main>
 
     <footer></footer>    
