realice estructura basica de las marcas que se distribuyen

--- a/index.html
+++ b/index.html
@@ -54,8 +54,21 @@
             </div>
         </section>
 
-        <section class="marcas">
-            
+        <section class="distribuidores">
+            <p>Distribuidores de...</p>
+            <div class="marcas">
+                <div class="m1">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                
+                <div class="m2">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>   
+            </div>
         </section>
     </main>
 
