realice estructura basica de css para la seccion de distribuidores

--- a/index.html
+++ b/index.html
@@ -55,18 +55,22 @@
         </section>
 
         <section class="distribuidores">
-            <p>Distribuidores de...</p>
+            <div class="texto">
+                <p>Distribuidores de...</p>
+                <p class="logo">logo</p>
+            </div>
+            
             <div class="marcas">
                 <div class="m1">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="img/perro.jpg" alt="">
+                    <img src="img/perro.jpg" alt="">
+                    <img src="img/perro.jpg" alt="">
                 </div>
                 
                 <div class="m2">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="img/perro.jpg" alt="">
+                    <img src="img/perro.jpg" alt="">
+                    <img src="img/perro.jpg" alt="">
                 </div>   
             </div>
         </section>
