agregue efectos al header

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
     <header>
-        <p class="logo">Logo</p>
+        <img src="img/logo.svg" class="logo">
         <nav>
-            <a href="">asdad</a>
-            <a href="">asdas</a>
-            <a href="">asd</a>
-            <a href="">aasd</a>
+            <a href="#" class="navs">seccion1</a>
+            <a href="#" class="navs">seccion2</a>
+            <a href="#" class="navs">seccion3</a>
+            <a href="#" class="navs">seccion4</a>
         </nav>
     </header>
 
@@ -27,28 +27,28 @@
         <section class="menu">
             <div class="seleccion">
                 <h2>Menu por mascota</h2>
-                <a href=""><p>Ver todo</p></a>
+                <a href=""><p class="boton">Ver todo</p></a>
             </div>
 
             <div class="mascotas"> 
                 <div>
                     <img src="img/perro.jpg" alt="">
-                    <p>Perros</p>
+                    <a href=""><p class="boton">Perros</p></a>
                 </div>
 
                 <div>
                     <img src="img/perro.jpg" alt="">
-                    <p>Gatos</p>
+                    <a href=""><p class="boton">Gatos</p></a>
                 </div>
 
                 <div>
                     <img src="img/perro.jpg" alt="">
-                    <p>Aves</p>
+                    <a href=""><p class="boton">Aves</p></a>
                 </div>
 
                 <div>
                     <img src="img/perro.jpg" alt="">
-                    <p>Conejos</p>
+                    <a href=""><p class="boton">Conejos</p></a>
                 </div>
                 
             </div>
