agregue imagenes al menu y realice variables para generalizar

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 
             <div class="mascotas"> 
                 <div>
-                    <img src="img/perro.jpg" alt="">
+                    <img src="img/perro.png" alt="">
                     <a href=""><p class="boton">Perros</p></a>
                 </div>
 
                 <div>
-                    <img src="img/perro.jpg" alt="">
+                    <img src="img/gato2.png" alt="">
                     <a href=""><p class="boton">Gatos</p></a>
                 </div>
 
                 <div>
-                    <img src="img/perro.jpg" alt="">
+                    <img src="img/gallina.png" alt="">
                     <a href=""><p class="boton">Aves</p></a>
                 </div>
 
                 <div>
-                    <img src="img/perro.jpg" alt="">
+                    <img src="img/conejo.png" alt="">
                     <a href=""><p class="boton">Conejos</p></a>
                 </div>
                 
