realice una seccion con las caracteristicas del negocio

--- a/index.html
+++ b/index.html
@@ -90,6 +90,45 @@
                 </div>   
             </div>
         </section>
+
+        <section class="caracteristicas">
+            <div class="c">
+                <img src="img/envio.svg" class="logo">
+                <div>
+                    <p>Envios en Santa Rosa</p>
+                    <p><span>Recibe gratis tu pedido en menos de 48hs.</span></p>
+                </div>
+            </div>
+
+
+            <div class="c">
+                <img src="img/politica.svg" class="logo">
+                <div>
+                    <p>Politica de satisfacción</p>
+                    <p><span>Si tienes un problema, ponte en contacto.</span></p>
+                </div>
+            </div>
+
+
+            <div class="c">
+                <img src="img/atencion.svg" class="logo">
+                <div>
+                    <p>Atención virtual</p>
+                    <p><span>Sistema de atención virtual, disponible 24hs.</span></p>
+                </div>
+                
+            </div>
+
+
+            <div class="c">
+                <img src="img/pago.svg" class="logo">
+                <div>
+                    <p>Paga al recibir</p>
+                    <p><span>Selecciona tu metodo de pago preferido, al ordenar o recibir tu pedido.</span></p>
+                </div>
+            </div>
+
+        </section>
     </main>
 
     <footer></footer>    
