realice estructura basica del footer

--- a/index.html
+++ b/index.html
@@ -129,8 +129,52 @@
             </div>
 
         </section>
+
+        <section class="contacto">
+            <h1>Realiza tu consulta con nosotros</h1>
+            <a href=""> click aqui </a>
+        </section>
     </main>
 
-    <footer></footer>    
+    <footer>
+        <section class="textos">
+            <div>
+                <div>
+                    <h2>Forrajeria "Los Patos"</h2>
+                    <p>¡Entregamos satisfacción!</p>
+                    <p>Nos mueve tu cariño y pasión por los animales.</p>
+                </div>
+                <p>Pedí a domiciolio desde tu hogar en Santa Rosa, La Pampa</p>
+            </div>
+
+            <div>
+                <h2>Forrajeria "Los Patos"</h2>
+                <p>Politica de privacidad</p>
+                <p>Terminos y servicios</p>
+                <p>Politica de cancelación y reembolso</p>
+                <p>Politica de envíos</p>
+            </div>
+        </section>
+
+        <section class="politicas">
+            <div>
+                <p>© 2024 Forrajeria "Los Patos"</p>
+            </div>
+
+            <div class="redes">
+                <p>Seguinos</p>
+                <img src="img/logo.svg" class="logo">
+                <img src="img/logo.svg" class="logo">
+            </div>
+
+            <div class="redes2">
+                <p>Aceptamos</p>
+                <img src="img/logo.svg" class="logo">
+                <img src="img/logo.svg" class="logo">
+                <img src="img/logo.svg" class="logo">
+            </div>
+        </section>
+    </footer>   
+
 </body>
 </html>
