agregue imagenes y termine de realizar la estructura del footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="mascotas"> 
                 <div>
-                    <img src="img/perro.png" alt="">
+                    <img src="img/perro.jpg" alt="">
                     <a href=""><p class="boton">Perros</p></a>
                 </div>
 
@@ -56,7 +56,6 @@
         <section class="distribuidores">
             <div class="texto">
                 <h2>Distribuidores de...</h2>
-                <p class="logo">logo</p>
             </div>
             
             <div class="marcas">
@@ -137,24 +136,27 @@
     </main>
 
     <footer>
+        <div class="linea"></div>
         <section class="textos">
             <div>
                 <div>
                     <h2>Forrajeria "Los Patos"</h2>
                     <p>¡Entregamos satisfacción!</p>
-                    <p>Nos mueve tu cariño y pasión por los animales.</p>
+                    <p>Nos mueve tu <span>cariño</span> y <span>pasión</span> por los animales.</p>
                 </div>
-                <p>Pedí a domiciolio desde tu hogar en Santa Rosa, La Pampa</p>
+                <p>Pedí a domicilio desde tu hogar en <span>Santa Rosa, La Pampa</span>.</p>
             </div>
 
             <div>
-                <h2>Forrajeria "Los Patos"</h2>
-                <p>Politica de privacidad</p>
-                <p>Terminos y servicios</p>
-                <p>Politica de cancelación y reembolso</p>
-                <p>Politica de envíos</p>
+                <h2>Información de negocio </h2>
+                <p><a href="">Politica de privacidad</a></p>
+                <p><a href="">Terminos y servicios</a></p>
+                <p><a href="">Politica de cancelación y reembolso</a></p>
+                <p><a href="">Politica de envíos</a></p>
             </div>
         </section>
+
+        <div class="linea"></div>
 
         <section class="politicas">
             <div>
@@ -162,16 +164,17 @@
             </div>
 
             <div class="redes">
-                <p>Seguinos</p>
-                <img src="img/logo.svg" class="logo">
-                <img src="img/logo.svg" class="logo">
+                <p>Hablanos</p>
+                <a href=""><img src="img/facebook.svg" class="logo_redes"></a>
+                <a href=""><img src="img/whatsapp.svg" class="logo_redes"></a>
+               
             </div>
 
             <div class="redes2">
                 <p>Aceptamos</p>
-                <img src="img/logo.svg" class="logo">
-                <img src="img/logo.svg" class="logo">
-                <img src="img/logo.svg" class="logo">
+                <img src="img/visa.svg" class="logo">
+                <img src="img/mastercard-svgrepo-com.svg" class="logo">
+                <img src="img/mercadopago.png" class="logo">
             </div>
         </section>
     </footer>   
